--- a/ledger_system/projects/templates/projects/update_status.html
+++ b/ledger_system/projects/templates/projects/update_status.html
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <title>Update Project Status</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
@@ -88,7 +87,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Update Status for {{ project.name }}</h2>
+    <h2>Update Status for {{ project.name }}({{project.client_name}})</h2>
     <form method="POST" class="add-expense-form">
       {% csrf_token %}
       <select name="status">
@@ -101,4 +100,3 @@
   </div>
 </body>
 </html>
-
