--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
-    <title>Elite Billing System</title>
+    <title>Elite Billing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
     <style>
