--- a/ledger_system/projects/templates/projects/billing.html
+++ b/ledger_system/projects/templates/projects/billing.html
@@ -1,6 +1,6 @@
 
 {% extends 'projects/base.html' %}
-{% block title %}Billing System{% endblock %}
+{% block title %}Billing{% endblock %}
 {% load static %}
 {% load extra_filters %}
 {% load humanize %}
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
-    <title>Billing System</title>
+    <title>Billing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
