--- a/ledger_system/projects/templates/projects/daily.html
+++ b/ledger_system/projects/templates/projects/daily.html
@@ -537,7 +537,7 @@
 <body>
     
     <nav class="navbar">
-        <div class="logo"><img src="{% static 'images/logo.png' %}" alt="Logo" style="width: 80px; height: auto; margin-bottom: 20px;">EDB Billing</div>
+        <div class="logo"><img src="{% static 'images/logo.PNG' %}" alt="Logo" style="width: 80px; height: auto; margin-bottom: 20px;">EDB Billing</div>
         
         <ul class="nav-menu" id="nav-menu">
             <li><a href="{% url 'billing' %}"><span class="icon">📋</span> Billing</a></li>
