--- a/ledger_system/projects/templates/projects/invoice.html
+++ b/ledger_system/projects/templates/projects/invoice.html
@@ -81,6 +81,7 @@
 
     th {
         background-color: #f0f0f0;
+        color:#000;
         font-weight: 600;
         border-top: 2px solid #333;
         border-bottom: 2px solid #333;
