--- a/ledger_system/projects/templates/projects/payment_invoice.html
+++ b/ledger_system/projects/templates/projects/payment_invoice.html
@@ -82,6 +82,7 @@
     th {
         background-color: #f0f0f0;
         font-weight: 600;
+        color:#000;
         border-top: 2px solid #333;
         border-bottom: 2px solid #333;
         text-transform: uppercase;
